--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     <script type="text/jsx">
 
         var CodysComponent = React.createClass({
+            doSomething: function() {
+                alert(this.props.name + this.props.children)
+            },
             render: function() {
               return(
                 <div>
                     <h2> {this.props.name} </h2>
-                    <p> {this.props.children} </p>
+                    <a onClick={this.doSomething} href="#" >Click me </a>
                 </div>
 
               );
